cdk.out/SpotInstanceStack.template.json
{
 "Resources": {
  "MyVPCAFB07A31": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "SpotInstanceStack/MyVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MyVPC/Resource"
   }
  },
  "MyVPCPublicSubnet1Subnet0C75866A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "MyVPCAFB07A31"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "SpotInstanceStack/MyVPC/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MyVPC/PublicSubnet1/Subnet"
   }
  },
  "MyVPCPublicSubnet1RouteTable538A9511": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "MyVPCAFB07A31"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "SpotInstanceStack/MyVPC/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MyVPC/PublicSubnet1/RouteTable"
   }
  },
  "MyVPCPublicSubnet1RouteTableAssociation8A950D8E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVPCPublicSubnet1RouteTable538A9511"
    },
    "SubnetId": {
     "Ref": "MyVPCPublicSubnet1Subnet0C75866A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MyVPC/PublicSubnet1/RouteTableAssociation"
   }
  },
  "MyVPCPublicSubnet1DefaultRouteAF81AA9B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVPCPublicSubnet1RouteTable538A9511"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MyVPCIGW30AB6DD6"
    }
   },
   "DependsOn": [
    "MyVPCVPCGWE6F260E1"
   ],
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MyVPC/PublicSubnet1/DefaultRoute"
   }
  },
  "MyVPCPublicSubnet1EIP5EB6147D": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "SpotInstanceStack/MyVPC/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MyVPC/PublicSubnet1/EIP"
   }
  },
  "MyVPCPublicSubnet1NATGateway838228A5": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "MyVPCPublicSubnet1Subnet0C75866A"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "MyVPCPublicSubnet1EIP5EB6147D",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "SpotInstanceStack/MyVPC/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MyVPC/PublicSubnet1/NATGateway"
   }
  },
  "MyVPCPublicSubnet2Subnet4DDFF14C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "MyVPCAFB07A31"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "SpotInstanceStack/MyVPC/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MyVPC/PublicSubnet2/Subnet"
   }
  },
  "MyVPCPublicSubnet2RouteTableA6A1CD3D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "MyVPCAFB07A31"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "SpotInstanceStack/MyVPC/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MyVPC/PublicSubnet2/RouteTable"
   }
  },
  "MyVPCPublicSubnet2RouteTableAssociationF22D63CA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVPCPublicSubnet2RouteTableA6A1CD3D"
    },
    "SubnetId": {
     "Ref": "MyVPCPublicSubnet2Subnet4DDFF14C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MyVPC/PublicSubnet2/RouteTableAssociation"
   }
  },
  "MyVPCPublicSubnet2DefaultRoute24460202": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVPCPublicSubnet2RouteTableA6A1CD3D"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MyVPCIGW30AB6DD6"
    }
   },
   "DependsOn": [
    "MyVPCVPCGWE6F260E1"
   ],
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MyVPC/PublicSubnet2/DefaultRoute"
   }
  },
  "MyVPCPublicSubnet2EIP6F364C5D": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "SpotInstanceStack/MyVPC/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MyVPC/PublicSubnet2/EIP"
   }
  },
  "MyVPCPublicSubnet2NATGateway4D6E78B8": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "MyVPCPublicSubnet2Subnet4DDFF14C"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "MyVPCPublicSubnet2EIP6F364C5D",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "SpotInstanceStack/MyVPC/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MyVPC/PublicSubnet2/NATGateway"
   }
  },
  "MyVPCPrivateSubnet1Subnet641543F4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "MyVPCAFB07A31"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "SpotInstanceStack/MyVPC/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MyVPC/PrivateSubnet1/Subnet"
   }
  },
  "MyVPCPrivateSubnet1RouteTable133BD901": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "MyVPCAFB07A31"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "SpotInstanceStack/MyVPC/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MyVPC/PrivateSubnet1/RouteTable"
   }
  },
  "MyVPCPrivateSubnet1RouteTableAssociation85DFBFBB": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVPCPrivateSubnet1RouteTable133BD901"
    },
    "SubnetId": {
     "Ref": "MyVPCPrivateSubnet1Subnet641543F4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MyVPC/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "MyVPCPrivateSubnet1DefaultRouteA8EE6636": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVPCPrivateSubnet1RouteTable133BD901"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MyVPCPublicSubnet1NATGateway838228A5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MyVPC/PrivateSubnet1/DefaultRoute"
   }
  },
  "MyVPCPrivateSubnet2SubnetA420D3F0": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "MyVPCAFB07A31"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "SpotInstanceStack/MyVPC/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MyVPC/PrivateSubnet2/Subnet"
   }
  },
  "MyVPCPrivateSubnet2RouteTableDF3CB76C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "MyVPCAFB07A31"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "SpotInstanceStack/MyVPC/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MyVPC/PrivateSubnet2/RouteTable"
   }
  },
  "MyVPCPrivateSubnet2RouteTableAssociationC373B6FE": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVPCPrivateSubnet2RouteTableDF3CB76C"
    },
    "SubnetId": {
     "Ref": "MyVPCPrivateSubnet2SubnetA420D3F0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MyVPC/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "MyVPCPrivateSubnet2DefaultRoute37F90B5D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVPCPrivateSubnet2RouteTableDF3CB76C"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MyVPCPublicSubnet2NATGateway4D6E78B8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MyVPC/PrivateSubnet2/DefaultRoute"
   }
  },
  "MyVPCIGW30AB6DD6": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "SpotInstanceStack/MyVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MyVPC/IGW"
   }
  },
  "MyVPCVPCGWE6F260E1": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "MyVPCAFB07A31"
    },
    "InternetGatewayId": {
     "Ref": "MyVPCIGW30AB6DD6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MyVPC/VPCGW"
   }
  },
  "MySecurityGroup": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "My security group",
    "VpcId": {
     "Ref": "MyVPCAFB07A31"
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MySecurityGroup"
   }
  },
  "SSHAccess": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "CidrIp": "0.0.0.0/0",
    "FromPort": 22,
    "GroupId": {
     "Ref": "MySecurityGroup"
    },
    "ToPort": 22
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/SSHAccess"
   }
  },
  "MySpotFleet": {
   "Type": "AWS::EC2::SpotFleet",
   "Properties": {
    "SpotFleetRequestConfigData": {
     "IamFleetRole": "arn:aws:iam::172744412179:role/fleetrole",
     "LaunchSpecifications": [
      {
       "ImageId": {
        "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamznamihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
       },
       "InstanceType": "t2.micro",
       "SecurityGroups": [
        {
         "GroupId": {
          "Ref": "MySecurityGroup"
         }
        }
       ]
      }
     ],
     "TargetCapacity": 1
    }
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/MySpotFleet"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/2WPwW7CMBBEv4W7MST8QFHUolyQFSruzrIthsSO1mtQFOXfa5NCKvW047fj0Wwm83Uu14s3ffdLOF1XAzhCORxYw1VU6F0gQFF8WaVJt8hIonDWMwXghP9a4uJk2Dg7ihSHkMvh2EFaHVUhVKgbA4dQW3x8nVXlAuOnrhuc+cy23jswOgW/zEm8lyqNveadZrzrXigytyjn4NLGwlE/DVOT39eW45HnFu3UBiGQ4X5HLnT/QGm/Cb1/8M7xR4PI4yhUz2dnVxuZZXKzuHhjlhQsmxZlNc0fuHAoD2EBAAA="
   },
   "Metadata": {
    "aws:cdk:path": "SpotInstanceStack/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Parameters": {
  "SsmParameterValueawsserviceamiamazonlinuxlatestamznamihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter": {
   "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
   "Default": "/aws/service/ami-amazon-linux-latest/amzn-ami-hvm-x86_64-gp2"
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-2"
       ]
      }
     ]
    }
   ]
  }
 }
}
